<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="">

    <group android:id="@+id/group1">

        <item android:title="@string/account"
            android:id="@+id/menu_myAccount"
            android:icon="@drawable/user_icon"></item>
        <item android:title="@string/log_out"
            android:id="@+id/menu_logOut"
            android:icon="@drawable/logout_icon"></item>

        </group>

<!-- *********************************************** -->
    <group android:id="@+id/grp2">

    <item android:title="@string/label_addUser"
        android:id="@+id/menu_addUser"
        android:icon="@drawable/add_user_icon"></item>

    <item android:title="@string/label_addProduct"
        android:id="@+id/menu_addProduct"
        android:icon="@drawable/add_product_icon"></item>

    </group>

    <!--  *********************************************** -->

    <group  android:id="@+id/grp3">
        <item android:title="@string/label_viewProduct"
           android:id="@+id/menu_viewAllProducts"
            android:icon="@drawable/view_products_icon"></item>

        <item android:title="@string/label_viewUsers"
            android:id="@+id/menu_view_all_users"
            android:icon="@drawable/view_all_user_icon"></item>

        <item android:title="@string/view_sales"
            android:id="@+id/menu_view_sales"
            android:icon="@drawable/seles_icon"></item>
    </group>
    <!--  *********************************************** -->

    <item android:title="">

        <item android:title="@string/contactUs"
            android:id="@+id/menu_contackUs"></item>

        <item android:title="@string/help"
            android:id="@+id/menu_help"></item>

    </item>

</item>


</menu>