<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khashan.rand.shopmanager.MainActivity_ACTIVITY">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/shopName"
        android:drawableRight="@drawable/shop_icon"
        android:ems="10"
        android:id="@+id/et_shopName"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/userName"
        android:drawableRight="@drawable/user_icon"
        android:ems="10"
        android:id="@+id/et_userName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_shopName" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:drawableRight="@drawable/password_icon"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_userName"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.66" />

    <RadioGroup
        android:layout_height="wrap_content"
        android:orientation='horizontal'
        android:layout_width="0dp"
        android:id="@+id/radioGroub_userType"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_password">

        <RadioButton
            android:text="@string/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_owner"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/Manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_manager"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_employee"
            android:layout_weight="1" />

    </RadioGroup>

    <com.khashan.rand.shopmanager.MyBranchSpinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/sp_branch"
        android:layout_marginEnd="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroub_userType" />

    <Button
        android:text="@string/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_text_color"
        android:id="@+id/b_logIn"
        android:focusable="true"
        android:background="@drawable/button_selector"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintHorizontal_bias="0.47"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/sp_branch" />

    <TextView
        android:text="@string/label_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:id="@+id/tv_signUp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/b_logIn"
        app:layout_constraintLeft_toLeftOf="parent" />

        <Space
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signUp"
        android:layout_marginTop="8dp" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/proggressBar_main"
            app:layout_constraintBottom_toTopOf="@+id/radioGroub_userType"
            app:layout_constraintRight_toRightOf="@+id/et_userName"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/et_userName" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>