<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khashan.rand.shopmanager.AddUser_ACTIVITY">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/userName"
        android:ems="10"
        android:id="@+id/et_userName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/userPassword"
        android:id="@+id/et_userPassword"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_userName" />


    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:orientation='horizontal'
        android:id="@+id/rg_maneger_employee"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_userPhone"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent">

        <RadioButton
            android:text="@string/Manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_manager"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />

        <RadioButton
            android:text="@string/employee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_employee"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="0dp" />
    </RadioGroup>

    <com.khashan.rand.shopmanager.MyBranchSpinner
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:id="@+id/sp_branch"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_maneger_employee" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sp_branch"
        app:layout_constraintHorizontal_bias="0.54"
        android:id="@+id/linearLayoutCompat"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
        android:text="@string/choosePermission"
        android:layout_width="wrap_content"
            android:layout_weight="6"
        android:layout_height="match_parent"
        android:id="@+id/textView"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteY="283dp"
        tools:layout_editor_absoluteX="54dp"
            android:paddingStart="10dp"
            android:elevation="1dp"
            android:paddingEnd="10dp" />

        <Button
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/b_choosePermossions"
            android:background="@drawable/permission_list"
             />


    </LinearLayout>

    <Button
        android:text="@string/add_UserActivity"
        android:layout_width="0dp"
        android:background="@drawable/button_selector"
        android:textColor="@color/button_text_color"
        android:layout_height="wrap_content"
        android:id="@+id/b_addUser"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phoneNumber"
        android:ems="10"
        android:id="@+id/et_userPhone"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_userPassword" />


</android.support.constraint.ConstraintLayout>
