<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khashan.rand.shopmanager.SignUp_ACTIVITY">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/shopName"
        android:ems="10"
        android:id="@+id/et_shopName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/sp_shopType"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_shopName"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/ownerName"
        android:ems="10"
        android:id="@+id/et_ownerName"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sp_shopType" />


    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/ownerPassword"
        android:ems="10"
        android:id="@+id/et_ownerPassword"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_phoneNumber" />


    <CheckBox
        android:text="@string/agrementMsg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cb_paymentAgree"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_ownerPassword"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.43" />

    <Button
        android:text="@string/label_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/b_signUp"
        android:background="@drawable/button_selector"
        android:textColor="@color/button_text_color"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cb_paymentAgree"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/et_phoneNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_ownerName"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.52" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_signUp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/et_ownerPassword"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/et_phoneNumber" />


</android.support.constraint.ConstraintLayout>
