<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_without_name__lol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.khashan.rand.shopmanager.WithoutName_LOL_ACTIVITY">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="145dp"
            android:layout_height="164dp"
            app:srcCompat="@drawable/user_profile"
            android:id="@+id/imageView"
            android:scaleType="fitCenter"
            android:adjustViewBounds="false"
            android:layout_marginTop="56dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:text="@string/profile_name"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/tv_name"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:text="@string/profile_work_at"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/tv_workAt"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintHorizontal_bias="0.56" />

        <TextView
            android:text="@string/profile_added_by"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/tv_adapter_addedBy"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_workAt" />

        <TextView
            android:text="@string/profile_permition"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/tv_permition"
            android:maxLines="5"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_adapter_addedBy"
            app:layout_constraintHorizontal_bias="0.52" />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_permition" />

    </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigation_view"
        android:layout_gravity="start"
        app:menu="@menu/main_menu"
        app:headerLayout="@layout/navigation_layout_header"
        android:background="@color/navigation_background"
        app:itemBackground="@drawable/ripple_effect_foe_navigation"

        >
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
